--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
-<html class="js backgroundsize borderimage csstransitions fontface svg" dir="ltr">
+<html class="js backgroundsize borderimage csstransitions fontface svg" dir="ltr" lang="en">
 <head>
-	<title>Untitled</title>
+	<title>Why You Should Choose Hi/Max</title>
 	<script src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_1_0/wet-boew/js/i18n/en.min.js"></script>
 	<script
 		src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_1_0/wet-boew/js/deps/jsonpointer.min.js"></script>
@@ -27,7 +27,7 @@
 
 <body>
 
-	<div> <!-- start of search-->
+	<div role="search"> <!-- start of search-->
 		<div id="wb-srch" class="col-lg-offset-4 col-md-offset-4 col-sm-offset-2 col-xs-12 col-sm-5 col-md-4">
 			<h2>Search</h2>
 
@@ -46,45 +46,46 @@
 
 		</div> <!--end of search-->
 	</div>
-	<div> <!-- start of header-->
+	
+		<header> <!-- start of header-->
 
-		<div class="app-bar">
-			<div class="container">
-				<div class="row">
-					<section class="col-xs-12">
-						<h2 class="wb-inv">Name of Web application</h2>
-						<a class="app-name" href="./index-en.html">Hi/Max Real Estate</a>
-					</section>
+			<div class="app-bar">
+				<div class="container">
+					<div class="row">
+						<section class="col-xs-12">
+							<h2 class="wb-inv">Name of Web application</h2>
+							<a class="app-name" href="./index-en.html">Hi/Max Real Estate</a>
+						</section>
+					</div>
 				</div>
 			</div>
-		</div>
+			<nav aria-label="Main menu">
+				<div id="wb-sm" data-ajax-replace="../ajax/cdtsMenu-en.html" data-trgt="mb-pnl"
+					class="wb-menu visible-md visible-lg wb-init wb-data-ajax-replace-inited wb-menu-inited wb-navcurr-inited"
+					typeof="SiteNavigationElement">
+					<div class="pnl-strt container nvbar">
+						<h2>Topics menu</h2>
+						<div class="row">
+							<ul role="menubar" class="list-inline menu">
+								<li><a class="item" href="index-en.html" tabindex="0" aria-posinset="1" aria-setsize="7"
+										role="menuitem">Home</a></li>
+								<li><a class="item" href="internet-en.html" tabindex="-1" aria-posinset="2" aria-setsize="7"
+										role="menuitem">Buying</a></li>
+								<li><a class="item" href="intranet-en.html" tabindex="-1" aria-posinset="3" aria-setsize="7"
+										role="menuitem">Selling</a></li>
+								<li><a class="item" href="faq-en.html" tabindex="-1" aria-posinset="6" aria-setsize="7"
+										role="menuitem">FAQs</a></li>
+								<li><a class="item" href="contact-en.html" tabindex="-1" aria-posinset="7" aria-setsize="7"
+										role="menuitem">Contact us</a></li>
+							</ul>
+						</div>
+					</div>
 
-		<div id="wb-sm" data-ajax-replace="../ajax/cdtsMenu-en.html" data-trgt="mb-pnl"
-			class="wb-menu visible-md visible-lg wb-init wb-data-ajax-replace-inited wb-menu-inited wb-navcurr-inited"
-			typeof="SiteNavigationElement">
-			<div class="pnl-strt container nvbar">
-				<h2>Topics menu</h2>
-				<div class="row">
-					<ul role="menubar" class="list-inline menu">
-						<li><a class="item" href="index-en.html" tabindex="0" aria-posinset="1" aria-setsize="7"
-								role="menuitem">Home</a></li>
-						<li><a class="item" href="internet-en.html" tabindex="-1" aria-posinset="2" aria-setsize="7"
-								role="menuitem">Buying</a></li>
-						<li><a class="item" href="intranet-en.html" tabindex="-1" aria-posinset="3" aria-setsize="7"
-								role="menuitem">Selling</a></li>
-						<li><a class="item" href="faq-en.html" tabindex="-1" aria-posinset="6" aria-setsize="7"
-								role="menuitem">FAQs</a></li>
-						<li><a class="item" href="contact-en.html" tabindex="-1" aria-posinset="7" aria-setsize="7"
-								role="menuitem">Contact us</a></li>
-					</ul>
-				</div>
-			</div>
 
-
-		</div> <!-- end of main navigation-->
-
-	</div> <!-- end of header-->
-
+				</div> <!-- end of main navigation-->
+			</nav>
+		</header> <!-- end of header-->
+	
 	<main property="mainContentOfPage" class="container">
 		<h1>Welcome</h1>
 		<p>Content A here</p>
@@ -122,30 +123,33 @@
 
 
 	</main>
-	<div id="wb-info" class=" wb-navcurr-inited">
-		<div class="gc-sub-footer">
-			<div class="container d-flex align-items-center">
-				<div>
-					<h3 class="wb-inv" id="aboutWebApp">Hi/Max Real Estate</h3>
-					<ul>
-						<li><a href="#">About the company</a></li>
-						<li><a href="#">Privacy policy</a></li>
-						<li><a href="#">Accessibility statement</a></li>
-						<li style="list-style: none;" class="social">
-						<a href="#"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
-						  <path d="M400 32H48C21.5 32 0 53.5 0 80v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V80c0-26.5-21.5-48-48-48zm-48.9 158.8c.2 2.8.2 5.7.2 8.5 0 86.7-66 186.6-186.6 186.6-37.2 0-71.7-10.8-100.7-29.4 5.3.6 10.4.8 15.8.8 30.7 0 58.9-10.4 81.4-28-28.8-.6-53-19.5-61.3-45.5 10.1 1.5 19.2 1.5 29.6-1.2-30-6.1-52.5-32.5-52.5-64.4v-.8c8.7 4.9 18.9 7.9 29.6 8.3a65.447 65.447 0 0 1-29.2-54.6c0-12.2 3.2-23.4 8.9-33.1 32.3 39.8 80.8 65.8 135.2 68.6-9.3-44.5 24-80.6 64-80.6 18.9 0 35.9 7.9 47.9 20.7 14.8-2.8 29-8.3 41.6-15.8-4.9 15.2-15.2 28-28.8 36.1 13.2-1.4 26-5.1 37.8-10.2-8.9 13.1-20.1 24.7-32.9 34z"></path>
-						</svg></a></li>
-						
-					  </ul>	
-				</div>
+	<footer aria-label="Footer">
+		<div id="wb-info" class=" wb-navcurr-inited">
+			<div class="gc-sub-footer">
+				<div class="container d-flex align-items-center">
+					<div>
+						<h3 class="wb-inv" id="aboutWebApp">Hi/Max Real Estate</h3>
+						<ul>
+							<li><a href="#">About the company</a></li>
+							<li><a href="#">Privacy policy</a></li>
+							<li><a href="#">Accessibility statement</a></li>
+							<li style="list-style: none;" class="social">
+							<a href="#" aria-label="Twitter"><svg role ="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+								<title>Connect on our Twitter Page</title>
+							<path d="M400 32H48C21.5 32 0 53.5 0 80v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V80c0-26.5-21.5-48-48-48zm-48.9 158.8c.2 2.8.2 5.7.2 8.5 0 86.7-66 186.6-186.6 186.6-37.2 0-71.7-10.8-100.7-29.4 5.3.6 10.4.8 15.8.8 30.7 0 58.9-10.4 81.4-28-28.8-.6-53-19.5-61.3-45.5 10.1 1.5 19.2 1.5 29.6-1.2-30-6.1-52.5-32.5-52.5-64.4v-.8c8.7 4.9 18.9 7.9 29.6 8.3a65.447 65.447 0 0 1-29.2-54.6c0-12.2 3.2-23.4 8.9-33.1 32.3 39.8 80.8 65.8 135.2 68.6-9.3-44.5 24-80.6 64-80.6 18.9 0 35.9 7.9 47.9 20.7 14.8-2.8 29-8.3 41.6-15.8-4.9 15.2-15.2 28-28.8 36.1 13.2-1.4 26-5.1 37.8-10.2-8.9 13.1-20.1 24.7-32.9 34z"></path>
+							</svg></a></li>
+							
+						</ul>	
+					</div>
 
-				<div class="col-xs-6 visible-sm visible-xs tofpg">
-					<a href="#wb-cont">Top of Page <span class="glyphicon glyphicon-chevron-up"></span></a>
-				</div>
+					<div class="col-xs-6 visible-sm visible-xs tofpg">
+						<a href="#wb-cont">Top of Page <span class="glyphicon glyphicon-chevron-up"></span></a>
+					</div>
 
+				</div>
 			</div>
-		</div>
-	</div> <!-- end of footer-->
+		</div> <!-- end of footer-->
+	</footer>
 
 	<script>
 		var defFooter = document.getElementById("def-footer");
