--- a/index.html
+++ b/index.html
@@ -155,39 +155,37 @@
 		<div><h3>More Resources on How to choose the Right Agent</h3></div>
 		<div class="row">
 			<div class="col-md-4 ">
-				<p>Content F here</p>
+				
+                <img src="https://github.com/jaelendsetosta-AC/Accessible_Lab5/blob/main/1.png?raw=true">
+                <br>
+                <a href="https://www.google.ca/" target="external" aria-label="(Opens link in a new window)">
+                    What Are The Risks of Selling a Home Yourself?
+                </a>
+                <p>We've all seen the videos, read the stories, and gasped at the images of people who thought they could conquer a 
+                    project that would have been better left to the professionals. 
+                </p>
 			</div>
 			<div class="col-md-4">
-				<p>Content G here</p>
-                <table>
-                    <tr>
-                      <th rowspan="2" id="h">Homework</th>
-                      <th colspan="3" id="e">Exams</th>
-                      <th colspan="3" id="p">Projects</th>
-                    </tr>
-                    <tr>
-                      <th id="e1" headers="e">1</th>
-                      <th id="e2" headers="e">2</th>
-                      <th id="ef" headers="e">Final</th>
-                      <th id="p1" headers="p">1</th>
-                      <th id="p2" headers="p">2</th>
-                      <th id="pf" headers="p">Final</th>
-                    </tr>
-                    <tr>
-                      <td headers="h">15%</td>
-                      <td headers="e e1">15%</td>
-                      <td headers="e e2">15%</td>
-                      <td headers="e ef">20%</td>
-                      <td headers="p p1">10%</td>
-                      <td headers="p p2">10%</td>
-                      <td headers="p pf">15%</td>
-                    </tr>
-                  </table>
+				
+                <img src="https://github.com/jaelendsetosta-AC/Accessible_Lab5/blob/main/2.png?raw=true">
+                <br>
+                <a href="https://www.google.ca/" target="external" aria-label="(Opens link in a new window)">
+                    7 Questions to Ask a Real Estate Agent Before You Commit
+                </a>
+                <p>According to research by the National Association of Realtors, there are considerable benefits 
+                    to working with a real estate agent, including higher sale prices.  
+                </p>
 
 			</div>
 			<div class="col-md-4">
-				<p>Content H here</p>
-
+				<img src="https://github.com/jaelendsetosta-AC/Accessible_Lab5/blob/main/3.png?raw=true">
+                <br>
+                <a href="https://www.google.ca/" target="external" aria-label="(Opens link in a new window)">
+                    8 Reasons to Hire an Agent When Selling Your Home
+                </a>
+                <p>With all the many different moving parts involved in selling your home, 
+                    here are eight very valid reasons to have a real estate agent on speed dial.  
+                </p>
 			</div>
 		</div>
 		<div class="pagedetails">
