--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html class="js backgroundsize borderimage csstransitions fontface svg" dir="ltr">
+<html class="js backgroundsize borderimage csstransitions fontface svg" lang="en" dir="ltr">
 <head>
 	<title>Hi/Max Real Estate</title>
 	<script src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_1_0/wet-boew/js/i18n/en.min.js"></script>
@@ -27,7 +27,7 @@
 
 <body>
 
-	<div> <!-- start of search-->
+	<div role="search"> <!-- start of search-->
 		<div id="wb-srch" class="col-lg-offset-4 col-md-offset-4 col-sm-offset-2 col-xs-12 col-sm-5 col-md-4">
 			<h2>Search</h2>
 
@@ -59,31 +59,32 @@
                     </div>
                 </div>
             </div>
-
-            <div id="wb-sm" role="navigation" data-ajax-replace="../ajax/cdtsMenu-en.html" data-trgt="mb-pnl"
-                class="wb-menu visible-md visible-lg wb-init wb-data-ajax-replace-inited wb-menu-inited wb-navcurr-inited"
-                typeof="SiteNavigationElement">
-                <div class="pnl-strt container nvbar">
-                    <h2>Topics menu</h2>
-                    <div class="row">
-                        <ul role="menubar" class="list-inline menu">
-                            <li><a class="item" href="index-en.html" tabindex="0" aria-posinset="1" aria-setsize="7"
-                                    role="menuitem">Home</a></li>
-                            <li><a class="item" href="internet-en.html"  aria-posinset="2" aria-setsize="7"
-                                    role="menuitem">Buying</a></li>
-                            <li><a class="item" href="intranet-en.html"  aria-posinset="3" aria-setsize="7"
-                                    role="menuitem">Selling</a></li>
-                            <li><a class="item" href="faq-en.html" aria-posinset="6" aria-setsize="7"
-                                    role="menuitem">FAQs</a></li>
-                            <li><a class="item" href="contact-en.html" aria-posinset="7" aria-setsize="7"
-                                    role="menuitem">Contact us</a></li>
-                        </ul>
+            
+            <nav>
+                <div id="wb-sm" data-ajax-replace="../ajax/cdtsMenu-en.html" data-trgt="mb-pnl"
+                    class="wb-menu visible-md visible-lg wb-init wb-data-ajax-replace-inited wb-menu-inited wb-navcurr-inited"
+                    typeof="SiteNavigationElement">
+                    <div class="pnl-strt container nvbar">
+                        <h2>Topics menu</h2>
+                        <div class="row">
+                            <ul role="menubar" class="list-inline menu">
+                                <li><a class="item" href="index-en.html" tabindex="0" aria-posinset="1" aria-setsize="7"
+                                        role="menuitem">Home</a></li>
+                                <li><a class="item" href="internet-en.html"  aria-posinset="2" aria-setsize="7"
+                                        role="menuitem">Buying</a></li>
+                                <li><a class="item" href="intranet-en.html"  aria-posinset="3" aria-setsize="7"
+                                        role="menuitem">Selling</a></li>
+                                <li><a class="item" href="faq-en.html" aria-posinset="6" aria-setsize="7"
+                                        role="menuitem">FAQs</a></li>
+                                <li><a class="item" href="contact-en.html" aria-posinset="7" aria-setsize="7"
+                                        role="menuitem">Contact us</a></li>
+                            </ul>
+                        </div>
                     </div>
-                </div>
 
 
-            </div> <!-- end of main navigation-->
-
+                </div> <!-- end of main navigation-->
+         </nav>
         </div> <!-- end of header-->
       
 
