Changes to semantics

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html class="js backgroundsize borderimage csstransitions fontface svg" dir="ltr">
+<html class="js backgroundsize borderimage csstransitions fontface svg" lang="en" dir="ltr">
 <head>
 	<title>Hi/Max Real Estate</title>
 	<script src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_1_0/wet-boew/js/i18n/en.min.js"></script>
@@ -29,11 +29,11 @@
 
     
     <header> <!-- start of header-->
-        <div> <!-- start of search-->
+        <div> 
             <div id="wb-srch" class="col-lg-offset-4 col-md-offset-4 col-sm-offset-2 col-xs-12 col-sm-5 col-md-4">
                 <h2>Search</h2>
 
-                <form action="/en/sr/srb.html" method="get" name="cse-search-box" role="search">
+                <form action="/en/sr/srb.html" method="get" name="cse-search-box" role="search"><!-- start of search-->
                     <div class="form-group wb-srch-qry">
                         <label for="wb-srch-q" class="wb-inv">Search Hi/Max.ca</label>
 
@@ -104,11 +104,11 @@
 				<h1>Related Resources</h1>
                 <p>It's time to sell and find the next "one". Let us help you navigate the ins & outs of your next move.</p>
                 <ul>
-                    <li><a href="https://www.google.ca/" target="external" aria-label="(Opens link in a new window)">
+                    <li><a href="https://www.google.ca/" target="external" aria-label="Looking for an upgrade?">
                         Looking for an upgrade?</a></li>
-                    <li><a href="https://www.google.ca/" target="external" aria-label="(Opens link in a new window)">
+                    <li><a href="https://www.google.ca/" target="external" aria-label="Buying tips">
                         Buying tips</a></li>    
-                    <li><a href="https://www.google.ca/" target="external" aria-label="(Opens link in a new window)">
+                    <li><a href="https://www.google.ca/" target="external" aria-label="how much is your current home worth?">
                         How much is your current home worth?</a></li>
                 </ul>
 
