--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     Hi/MAX Real Estate, which according to Canadian consumers, has been voted #1 Most Trusted Real Estate Agents in Canada 
                     six times in a row.
                 </p>
-            <a href="https://www.google.ca/" target="external" aria-label="(Opens link in a new window)">
+            <a href="https://www.google.ca/" target="external" aria-label="Lets get started">
                 Lets get started
             </a>
 		<div class="row">
